# DRS4lib

./: CMakeLists.txt  Makefile  README.md  listGoodEvents.cc  merge.cc  run.sh  source-lxplus.sh
13118/: Tables_gr0_cell.txt  Tables_gr1_time.txt
21333/: Tables_gr0_nsample.txt  Tables_gr0_time.txt  Tables_gr1_cell.txt  Tables_gr1_nsample.txt
DRS4lib/: Calibrations.h  ChannelCalibrations.h  ChannelGroup.h  DataFormat.h  Event.h  EventHeader.h  GroupCalibrations.h  InputParser.h  ModuleCalibrations.h  ModuleFileReader.h  Reader.h
data/13118/: Tables_gr0_nsample.txt  Tables_gr0_time.txt  Tables_gr1_cell.txt  Tables_gr1_nsample.txt
data/21333/: Tables_gr0_cell.txt  Tables_gr1_time.txt
data/533364/: Tables_gr0_cell.txt  Tables_gr0_nsample.txt  Tables_gr0_time.txt  Tables_gr1_cell.txt  Tables_gr1_nsample.txt  Tables_gr1_time.txt
src/: Calibrations.cc  ChannelCalibrations.cc  ChannelGroup.cc  Event.cc  GroupCalibrations.cc  ModuleCalibrations.cc  ModuleFileReader.cc  Reader.cc  listGoodEvents.cc  maketree.cc  merge.cc  read.cc
test/: CMakeLists.txt  README.md  dump_calibrations.cc  maketree.cc  read.cc
utils/: CheckSync.C
